--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,8 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 24px;
+  /* gap: 24px; */
+  width: 100%;
 }
 .header-nav {
   display: flex;
@@ -131,7 +132,7 @@ img {
 }
 .logo {
   display: inline-block;
-  margin-right: 76px;
+  /* margin-right: 76px; */
   color: var(--IRIS);
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -148,7 +149,9 @@ address {
 }
 .contacts-list {
   display: flex;
-  gap: 40px;
+  flex-direction: column;
+  /* gap: 40px; */
+  gap: 12px;
 }
 .contacts-link {
   color: var(--SLATE);
@@ -159,6 +162,18 @@ address {
 .contacts-link:hover,
 .contacts-link:focus {
   color: var(--OCEAN);
+}
+.menu-toggle {
+  min-width: 24px;
+  min-height: 24px;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+.menu-toggle-icon {
+  fill: var(--NAVY-BLUE);
 }
 
 /*Section hero*/
@@ -173,19 +188,26 @@ address {
 
   background-size: cover;
   background-color: var(--NAVY-BLUE);
-  padding: 188px 0;
-  max-width: 1440px;
+  /* padding: 188px 0; */
+  padding: 72px 0;
+  /* max-width: 1440px; */
+  max-width: 320px;
   margin: 0 auto;
 }
 .hero-title {
-  max-width: 496px;
-  margin-bottom: 48px;
+  /* max-width: 496px; */
+  max-width: 288px;
+  /* margin-bottom: 48px; */
+  margin-bottom: 72px;
 
   color: var(--WHITE);
-  font-size: 56px;
-  line-height: 1.07;
+  /* font-size: 56px; */
+  font-size: 36px;
+  /* line-height: 1.07; */
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
 }
 .hero-button {
   min-width: 169px;
@@ -230,7 +252,6 @@ address {
   text-transform: capitalize;
   text-align: center;
 }
-
 .icon-box {
   display: flex;
   justify-content: center;
@@ -712,10 +733,120 @@ address {
   margin: 0 auto;
 }
 
+/*Mobile menu*/
+.mobile-menu {
+  display: flex;
+  flex-direction: column;
+
+  padding: 72px 16px 40px;
+
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: var(--WHITE);
+
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+.mobile-menu-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
+  min-width: 24px;
+  min-height: 24px;
+  border: 1px solid var(--CORNFLOWER);
+  border-radius: 50%;
+  background-color: transparent;
+  padding: 0;
+}
+.mobile-menu-list {
+  margin-bottom: auto;
+}
+.mobile-menu-icon {
+  fill: var(--NAVY-BLUE);
+}
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+.mobile-menu-link {
+  color: var(--NAVY-BLUE);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11; /* 111.111% */
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+}
+.mobile-menu-link.current {
+  color: var(--OCEAN);
+}
+.mobile-contacts-list {
+  margin-bottom: 48px;
+}
+.mobile-contacts-link {
+  color: var(--SLATE);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2; /* 120% */
+  letter-spacing: 0.02em;
+}
+.mobile-contacts-link.accent {
+  color: var(--IRIS);
+}
+.mobile-contacts-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+.mobile-socials-list {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+.mobile-socials-link {
+  background-color: var(--IRIS);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mobile-socials-icon {
+  fill: var(--CLOUD);
+}
+
 /* Tablet screen */
 @media screen and (min-width: 768px) {
   .container {
     max-width: 736px;
+  }
+  .header-menu-btn {
+    display: none;
+  }
+  .logo {
+    margin-right: 120px;
+  }
+  .contacts-list {
+    font-size: 12px;
+  }
+  .hero-section {
+    padding: 112px 0;
+    max-width: 768px;
+  }
+  .hero-title {
+    max-width: 496px;
+    margin-bottom: 36px;
+    font-size: 56px;
+    line-height: 1.07;
   }
   .advantege-title {
     text-align: start;
@@ -770,6 +901,23 @@ address {
   .container {
     max-width: 1158px;
   }
+  .logo {
+    margin-right: 76px;
+  }
+  .contacts-list {
+    font-size: 16px;
+    flex-direction: row;
+    gap: 40px;
+  }
+  .hero-section {
+    padding: 188px 0;
+    max-width: 1440px;
+  }
+  .hero-title {
+    margin-bottom: 48px;
+    font-size: 56px;
+    line-height: 1.07;
+  }
   .advantege-title {
     font-size: 20px;
     font-weight: 500;
@@ -807,5 +955,29 @@ address {
 @media screen and (max-width: 1199.98px) {
   .icon-box {
     display: none;
+  }
+}
+
+/* Mobile screen only*/
+@media only screen and (max-width: 767.98px) {
+  .nav-list {
+    display: none;
+  }
+  .contacts {
+    display: none;
+  }
+  .logo {
+    padding: 16px 0;
+  }
+  .container.header-inner {
+    margin: 0;
+  }
+
+  .modal {
+    width: 288px;
+    min-height: 623px;
+  }
+  .modal-title {
+    width: 256px;
   }
 }
