--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ img {
   justify-content: space-between;
   align-items: center;
   /* gap: 24px; */
-  width: 100%;
+  width: 320px;
 }
 .header-nav {
   display: flex;
